--- a/hello.html
+++ b/hello.html
@@ -146,7 +146,11 @@
 
             <div id="skills">
                 <h2>Education & Skills</h2>
-                <p><strong>Education:</strong> Bachelor in Computer Applications</p>
+                <p><strong>Education:</strong></p>
+                <ul>
+                    <li>Bachelor in Computer Applications</li>
+                    <li>Master in Computer Applications</li>
+                </ul>
                 
                 <h3>My Core Skills:</h3>
                 <ul>
