--- a/Form.html
+++ b/Form.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif;
       background-color: #f2f2f2;
       margin: 0;
-      padding: 0;
+      padding: 5px;
     }
 
     .container {
@@ -28,7 +28,7 @@
 
     label {
       display: block;
-      margin-bottom: 5px;
+      margin-bottom: 6px;
       font-weight: bold;
     }
 
@@ -39,8 +39,8 @@
     textarea,
     select {
       width: 100%;
-      padding: 8px;
-      margin-bottom: 15px;
+      padding: 7.5px;
+      margin-bottom: 14.5px;
       border: 1px solid #ccc;
       border-radius: 4px;
       box-sizing: border-box;
@@ -90,7 +90,7 @@
       <input type="email" placeholder="E-Mail Address" required>
 
       <label>Phone #</label>
-      <input type="tel" placeholder="(845)555-1212">
+      <input type="tel" placeholder="">
 
       <label>Address</label>
       <input type="text" placeholder="Address">
