Update placeholders in form fields

--- a/Form.html
+++ b/Form.html
@@ -90,7 +90,7 @@
       <input type="email" placeholder="E-Mail Address" required>
 
       <label>Phone #</label>
-      <input type="tel" placeholder="">
+      <input type="tel" placeholder="+9199999xxxxx">
 
       <label>Address</label>
       <input type="text" placeholder="Address">
@@ -108,7 +108,7 @@
       </select>
 
       <label>Zip Code</label>
-      <input type="number" placeholder="Zip Code">
+      <input type="number" placeholder="Zip Code(120765)">
 
       <label>Website or Domain Name</label>
       <input type="text" placeholder="Website or domain name">
@@ -120,7 +120,7 @@
       </div>
 
       <label>Project Description</label>
-      <textarea placeholder="Project Description"></textarea>
+      <textarea placeholder="Enter Project Description"></textarea>
 
       <button type="submit">Send</button>
     </form>
