--- a/First.html
+++ b/First.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Welcome to My Web Page</h1>
+    <p>This is a simple web page created using the HTML boilerplate structure.</p>
 </body>
 </html>
