Add header and introduction paragraph and image tag

--- a/2nd.html
+++ b/2nd.html
@@ -6,6 +6,9 @@
     <title>Paragraphs, Images & Links</title>
 </head>
 <body>
-    
+    <h1>My Personal Web Page</h1>
+    <p>Hello! My name is <b>Anshuman Sharma</b>. I love web development.</p>
+
+    <img src="D:/car.jpg" alt="Sample Image" width="300">
 </body>
 </html>
