--- a/2nd.html
+++ b/2nd.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paragraphs, Images & Links</title>
+    <style>
+        body {
+            text-align: center;
+            margin: 50px;
+            background-color: #f9f9f9;
+        }
+    </style>
+
 </head>
 <body>
     <h1>My Personal Web Page</h1>
