--- a/2nd.html
+++ b/2nd.html
@@ -10,6 +10,26 @@
             margin: 50px;
             background-color: #f9f9f9;
         }
+        h1 {
+            color: #333;
+            margin-bottom: 20px;
+        }
+        img {
+            display: block;
+            margin: 20px auto;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.2);
+        }
+        p {
+            color: #555;
+            font-size: 18px;
+            line-height: 1.6;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        
     </style>
 
 </head>
