--- a/2nd.html
+++ b/2nd.html
@@ -29,6 +29,9 @@
             color: #007bff;
             text-decoration: none;
         }
+        a:hover {
+            text-decoration: underline;
+        }
         
     </style>
 
