Added unordered list

--- a/3rd_lists.html
+++ b/3rd_lists.html
@@ -6,6 +6,13 @@
     <title>Lists</title>
 </head>
 <body>
-    
+    <h1>HTML Lists Example</h1>
+
+    <h2>Unordered List</h2>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+    </ul>
 </body>
 </html
