Added ordered list

--- a/3rd_lists.html
+++ b/3rd_lists.html
@@ -14,5 +14,12 @@
         <li>CSS</li>
         <li>JavaScript</li>
     </ul>
+
+    <h2>Ordered List</h2>
+    <ol type="A">
+        <li>Frontend</li>
+        <li>Backend</li>
+        <li>Database</li>
+    </ol>
 </body>
 </html
