Added nested ordered list

--- a/3rd_lists.html
+++ b/3rd_lists.html
@@ -21,5 +21,17 @@
         <li>Backend</li>
         <li>Database</li>
     </ol>
+
+    <h2>Nested List</h2>
+    <ul>
+        <li>Web Development
+            <ol>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ol>
+        </li>
+        <li>Programming Languages</li>
+    </ul>
 </body>
 </html
