--- a/4th_Tables_basics.html
+++ b/4th_Tables_basics.html
@@ -6,6 +6,28 @@
     <title>Tables</title>
 </head>
 <body>
-    
+    <table border="1" cellpadding="8">
+            <tr>
+                <th colspan="2">Contact Form</th>
+            </tr>
+            <tr>
+                <td>Name:</td>
+                <td><input type="text" name="name" required></td>
+            </tr>
+            <tr>
+                <td>Email:</td>
+                <td><input type="email" name="email" required></td>
+            </tr>
+            <tr>
+                <td>Message:</td>
+                <td><textarea name="message" rows="4" cols="25"></textarea></td>
+            </tr>
+            <tr>
+                <td colspan="2" align="center">
+                    <input type="submit" value="Submit">
+                    <input type="reset" value="Reset">
+                </td>
+            </tr>
+    </table>
 </body>
 </html>
