Add contact form inside a table in HTML

--- a/4th_Tables_basics.html
+++ b/4th_Tables_basics.html
@@ -6,7 +6,10 @@
     <title>Tables</title>
 </head>
 <body>
-    <table border="1" cellpadding="8">
+    <h1>Contact Us</h1>
+
+    <form method="post" action="">
+        <table border="1" cellpadding="8">
             <tr>
                 <th colspan="2">Contact Form</th>
             </tr>
@@ -28,6 +31,7 @@
                     <input type="reset" value="Reset">
                 </td>
             </tr>
-    </table>
+        </table>
+    </form>
 </body>
 </html>
