--- a/tt.html
+++ b/tt.html
@@ -32,6 +32,39 @@ body {
     max-width: 1200px;
     margin: 0 auto;
 }
+        header {
+    text-align: center;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+.logo-placeholder {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 70px;
+    height: 80px;
+    background-color: #800000;
+    color: gold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    border-radius: 0 0 10px 10px;
+}
+
+.tm-tag { position: absolute; right: 0; top: 0; font-weight: bold; }
+
+h1 { font-size: 18px; font-weight: bold; text-transform: uppercase; margin: 5px 0; }
+h2 { font-size: 14px; margin: 5px 0; }
+h3 { font-size: 12px; margin: 5px 0; }
+
+.meta-info {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 15px;
+    font-weight: bold;
+}
     </style>
 </head>
 <body>
