added time tables

--- a/tt.html
+++ b/tt.html
@@ -82,6 +82,68 @@ h3 { font-size: 12px; margin: 5px 0; }
         <div style="text-align: right;">w.e.f: 22/9/2025<br>Session - 2025-26, ODD Semester</div>
     </div>
 </header>
+           <div class="timetable-wrapper">
+        <table>
+            <tbody>
+                <!-- Monday -->
+                <tr>
+                    <th>MONDAY</th>
+                    <td class="bg-blue"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25VC-101-AL</span></div></td>
+                    <td class="bg-green"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25CA-102-KD</span></div></td>
+                    <td class="bg-yellow"><div class="cell-content"><span class="room-no">T AB-206</span><span class="subject-code">25VC102-LD</span></div></td>
+                    <td class="bg-teal"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25HM-101-SV</span></div></td>
+                    <td rowspan="5" class="lunch-cell">LUNCH</td>
+                    <td class="bg-blue"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25VC-101-AL</span></div></td>
+                    <td class="bg-green"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25CA-101-MG</span></div></td>
+                    <td class="bg-orange"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25CA-104-TY</span></div></td>
+                    <td class="bg-white"><div class="cell-content"><span>Library</span></div></td>
+                </tr>
+                <!-- Tuesday -->
+                <tr>
+                    <th>TUESDAY</th>
+                    <td class="bg-orange"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25CA-104-TY</span></div></td>
+                    <td class="bg-teal"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25HM-101-SV</span></div></td>
+                    <td colspan="2" class="bg-pink"><div class="cell-content"><span class="room-no">P AB-206</span><span class="subject-code">25CA154-TY+AP</span></div></td>
+                    <td class="bg-beige"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25CA-103-AK</span></div></td>
+                    <td class="bg-blue"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25VC-101-AL</span></div></td>
+                    <td class="bg-green"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25CA-101-MG</span></div></td>
+                    <td class="bg-white"><div class="cell-content"><span>Library</span></div></td>
+                </tr>
+                <!-- Wednesday -->
+                <tr>
+                    <th>WEDNESDAY</th>
+                    <td class="bg-green"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25CA-101-MG</span></div></td>
+                    <td class="bg-green"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25CA-102-KD</span></div></td>
+                    <td colspan="2" class="bg-green-pale"><div class="cell-content"><span class="room-no">T AB-206</span><span class="subject-code">25VC102-HS</span></div></td>
+                    <td class="bg-beige"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25CA-103-AK</span></div></td>
+                    <td colspan="2" class="bg-purple"><div class="cell-content"><span class="room-no">P AB-206</span><span class="subject-code">25CA151-MG+GA</span></div></td>
+                    <td class="bg-teal"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25HM-101-SV</span></div></td>
+                </tr>
+                <!-- Thursday -->
+                <tr>
+                    <th>THURSDAY</th>
+                    <td class="bg-blue"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25VC-101-AL</span></div></td>
+                    <td class="bg-green"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25CA-101-MG</span></div></td>
+                    <td class="bg-teal"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25HM-101-SV</span></div></td>
+                    <td class="bg-green"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25CA-102-KD</span></div></td>
+                    <td class="bg-orange"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25CA-104-TY</span></div></td>
+                    <td class="bg-beige"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25CA-103-AK</span></div></td>
+                    <td colspan="2" class="bg-pink"><div class="cell-content"><span class="room-no">P AB-206</span><span class="subject-code">25VC154-AL+AP</span></div></td>
+                </tr>
+                <!-- Friday -->
+                <tr>
+                    <th>FRIDAY</th>
+                    <td class="bg-green"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25CA-102-KD</span></div></td>
+                    <td class="bg-green"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25CA-101-MG</span></div></td>
+                    <td class="bg-beige"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25CA-103-AK</span></div></td>
+                    <td class="bg-beige"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25CA-103-AK</span></div></td>
+                    <td class="bg-teal"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25HM-101-SV</span></div></td>
+                    <td class="bg-blue"><div class="cell-content"><span class="room-no">L AB-206</span><span class="subject-code">25VC-101-AL</span></div></td>
+                    <td colspan="2" class="bg-white"><div class="cell-content"><span>Mentor Mentee Meeting</span></div></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     </div>
 </body>
 </html>
