added footer containing faculty info

--- a/tt.html
+++ b/tt.html
@@ -144,6 +144,22 @@ h3 { font-size: 12px; margin: 5px 0; }
             </tbody>
         </table>
     </div>
+           <div class="footer-legend">
+        <table class="legend-table">
+            <tr><td>25CA101-Data Structure Using C++ -Ms. Meghna Gupta-MG</td></tr>
+            <tr><td>25CA102-Operating System-Ms. Kalpana Dwevedi-KD</td></tr>
+            <tr><td>25CA103- Essentials of Mathematics-Mr. Ajay Kumar-AK</td></tr>
+            <tr><td>25CA-104-Essentials of AI-Ms. Teena Yadav-TY</td></tr>
+            <tr><td>25VC101 Web Designing-I- Ms. Alpana Lodhi-AL</td></tr>
+            <tr><td>25HM101 Soft Skills106 -Dr. Seema varma-SV</td></tr>
+            <tr><td>25VC102-Employability Skills-1-Harshit Sharma-HS</td></tr>
+        </table>
+        <table class="legend-table">
+            <tr><td>25CA151-Data Structure Using C++ LAB -Ms. Meghna Gupta+Ms. Gunjan Agarwal-GA</td></tr>
+            <tr><td>25CA154- Essentials of AI LAB-Ms. Teena Yadav-TY+Mr. Asheesh pandey-AP</td></tr>
+            <tr><td>25VC151- Web Desiging-LAB- Ms. Alpana Lodhi-AL+ Mr. Asheesh pandey-AP</td></tr>
+        </table>
+    </div>
     </div>
 </body>
 </html>
