--- a/flex.html
+++ b/flex.html
@@ -6,6 +6,15 @@
     <title>Flex Box</title>
 </head>
 <body>
-    
+    <h2>Display Flex Example</h2>
+
+<div class="main-container">
+    <div class="box">1</div>
+    <div class="box">2</div>
+    <div class="box">3</div>
+    <div class="box">4</div>
+    <div class="box">5</div>
+    <div class="box">6</div>
+</div>
 </body>
 </html>
