--- a/flex.html
+++ b/flex.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex Box</title>
+    <style>
+        .main-container {
+            display: flex;
+            gap: 10px;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
+        .box {
+            width: 80px;
+            height: 80px;
+            background-color: skyblue;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <h2>Display Flex Example</h2>
