--- a/pseudo_classes.html
+++ b/pseudo_classes.html
@@ -6,6 +6,21 @@
     <title>pseudo classes</title>
 </head>
 <body>
-    
+    <h2>Pseudo Classes </h2>
+
+<a href="#"> link</a>
+<br><br>
+
+<button>Click Me</button>
+<br><br>
+
+<input type="text" placeholder="Click to focus">
+<br><br>
+
+<ul>
+    <li>First item</li>
+    <li>Middle item</li>
+    <li>Last item</li>
+</ul>
 </body>
 </html>
