--- a/pseudo_classes.html
+++ b/pseudo_classes.html
@@ -4,6 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pseudo classes</title>
+    <style>
+        a:hover {
+            color: red;
+        }
+
+        a:visited {
+            color: purple;
+        }
+
+        button:active {
+            background-color: yellow;
+        }
+
+        input:focus {
+            border: 2px solid blue;
+        }
+
+        ul li:first-child {
+            color: green;
+        }
+
+        ul li:last-child {
+            color: orange;
+        }
+    </style>
 </head>
 <body>
     <h2>Pseudo Classes </h2>
